--- a/KingPIM/KingPIM.Web/KingPIM.Web.csproj
+++ b/KingPIM/KingPIM.Web/KingPIM.Web.csproj
@@ -5,7 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\" />
+    <Folder Include="Controllers\" />
+    <Folder Include="Views\" />
+    <Folder Include="wwwroot\Css\" />
+    <Folder Include="wwwroot\JS\" />
   </ItemGroup>
 
   <ItemGroup>
