Created controllers for the models

--- a/KingPIM/KingPIM.Web/KingPIM.Web.csproj
+++ b/KingPIM/KingPIM.Web/KingPIM.Web.csproj
@@ -5,7 +5,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
     <Folder Include="Views\" />
     <Folder Include="wwwroot\Css\" />
     <Folder Include="wwwroot\JS\" />
@@ -13,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
   </ItemGroup>
 
 </Project>
