Added materialize and home index view

--- a/KingPIM/KingPIM.Web/KingPIM.Web.csproj
+++ b/KingPIM/KingPIM.Web/KingPIM.Web.csproj
@@ -5,8 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\Css\" />
-    <Folder Include="wwwroot\JS\" />
+    <Content Remove="compilerconfig.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="compilerconfig.json" />
   </ItemGroup>
 
   <ItemGroup>
