--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "feather-icons": "^4.7.3",
     "jQuery": "^1.7.4",
     "materialize": "^1.0.0",
     "materialize-css": "^1.0.0"
