--- a/KingPIM/KingPIM.Web/package.json
+++ b/KingPIM/KingPIM.Web/package.json
@@ -3,9 +3,8 @@
   "name": "asp.net",
   "private": true,
   "devDependencies": {
-    "materialize-css": "1.0.0"
-  },
-  "dependencies": {
-    "feather-icons": "^4.7.3"
+    "materialize-css": "1.0.0",
+    "jquery": "3.3.1",
+    "popper.js": "1.14.4"
   }
 }
