created product repository, product attribute repository and attributegroup repository

--- a/KingPIM/KingPIM.Web/appsettings.json
+++ b/KingPIM/KingPIM.Web/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "KingPIM": "Server=5CG7233DZR\\SQLEXPRESS;Database=KingPIM;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "KingPIM": "Server=5CG7233DZR\\SQLEXPRESS;Database=KingPIM2;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
